# fastapi-socis

./: .gitignore  main.py  sql_app.db
alembic/: env.py
alembic/versions/: ad4f3209be30_create_user_and_enrolment_tables.py
app/: crud.py  models.py  pyproject.toml  schemas.py  sql_app.db
app/alembic/: env.py
app/alembic/versions/: 640e644d0909_intial.py  c5c62362a433_initial.py
app/app/: __init__.py  crud.py  main.py  models.py  pyproject.toml  schemas.py  sql_app.db
app/app/api/: api.py  deps.py
app/app/api/endpoints/: acts.py  enrolments.py  items.py  users.py
app/app/core/: config.py
app/db/: base.py  base_class.py
