[tool.poetry]
name = "fastapi-socis"
version = "0.1.0"
description = "API per facilitar la gestió de l'associació."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
pydantic = {extras = ["email"], version = "^1.9.1"}
SQLAlchemy = "^1.4.36"
alembic = "^1.8.0"
bcrypt = "^3.2.2"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
